add links and picture

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Peter Sculley</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+  </head>
+  <body>
+    <div class="main">
+      <img src="resources/profile.jpg" />
+      <h1>Peter Sculley</h1>
+      <p class="description">I'm a software engineer! I specialize in startups and remote work.</p>
+    </div>
+    <div class="links">
+      <h1>Links</h1>
+      <div class="link"><a href="https://docs.google.com/document/d/1plOYBzWMJRwC6PC1i5EWDxpMcgz38ZlMVhMAXwumVME/export?format=pdf">Resume/CV</a></div>
+      <div class="link"><a href="https://www.linkedin.com/in/peter-sculley-b3759658/">LinkedIn</a></div>
+      <div class="link"><a href="https://www.github.com/peteresculley">Github</a></div>
+    </div>
+  </body>
+</html>
