--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <div class="main">
       <img src="resources/profile.jpg" />
       <h1>Peter Sculley</h1>
-      <p class="description">I'm a software engineer! I specialize in startups and remote work.</p>
+      <div class="description">
+        <p>
+          I'm a software engineer! My skills include Javascript/Typescript, Nodejs, Reactjs, Reduxjs, and Rxjs.
+        </p>
+        <p>
+          I'm especially fond of startups and remote work.
+        </p>
+      </div>
     </div>
     <div class="links">
       <h1>Links</h1>
