update resume download link

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <title>Peter Sculley</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
   </head>
   <body>
+    <nav>
+      <a href="/"><label>Home</label></a>
+      <a href="/game"><label>Game</label></a>
+    </nav>
     <div class="main">
-      <img src="resources/profile.jpg" />
+      <img src="./resources/profile.jpg" />
       <h1>Peter Sculley</h1>
       <div class="description">
         <p>
@@ -19,7 +23,7 @@
     </div>
     <div class="links">
       <h1>Links</h1>
-      <div class="link"><a href="https://docs.google.com/document/d/1plOYBzWMJRwC6PC1i5EWDxpMcgz38ZlMVhMAXwumVME/export?format=pdf">Resume/CV</a></div>
+      <div class="link"><a href="https://docs.google.com/document/d/1mswR6N4ckdVPCdbN8gLryVkcq0-0Ko37YXFxhvEl7QA/export?format=pdf">Resume/CV</a></div>
       <div class="link"><a href="https://www.linkedin.com/in/peter-sculley-b3759658/">LinkedIn</a></div>
       <div class="link"><a href="https://www.github.com/peteresculley">Github</a></div>
     </div>
