add test for disguising upload as download

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <nav>
       <a href="/"><label>Home</label></a>
-      <a href="/game"><label>Game</label></a>
+      <a href="/test-area.html"><label>Test Area</label></a>
     </nav>
     <div class="main">
       <img src="./resources/profile.jpg" />
